# src/app/shared/api/endpoints/models.ts
@@ -1,4 +1,5 @@
 export { ArticleModel } from './models/article-model';
 export { QueryResultModel } from './models/query-result-model';
-export { QueryModel } from './models/query-model';
 export { IndexStatus } from './models/index-status';
+export { QueryModel } from './models/query-model';
+export { SavedIndexStatus } from './models/saved-index-status';
