# src/app/shared/api/endpoints/models/saved-index-status.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface SavedIndexStatus {
+  saved?: boolean;
+}
